--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -63,7 +63,7 @@
  in_war_together:0 "同じ戦争"
  transfers_trade_power:0 "以下へ交易力を送出しています"
  getting_trade_power:0 "以下から交易力を得ています"
- broke_transfer_trade_power:0 "交易力の送出関係を破棄した"
+ broke_transfer_trade_power:0 "交易力の移譲関係を破棄した"
  NOALL_WE_DISLIKE:0 "我々は$WHO$に肯定的な評価を持っている必要があります。現在は$VAL$であるため、彼らと同盟を結ぶことはできません。"
  NOALL_THEY_DISLIKE:0 "$WHO$は我々を良く思っていないため、同盟を結ぶことはできません。彼らは私たちに対して肯定的な評価を持っている必要があります。現在は$VAL$です。"
  ENFORCEPEACE_TRUCE:0 "あなたと休戦中の国に和平を強制することはできません。"
@@ -146,7 +146,7 @@
  ANNEX_TOO_LOW:0 "属国の併合を開始できるようにするには、§Y+190§!以上の外交評価が必要です。"
  MAX_ALLIANCE_REACHED:0 "我々は§Y$VAL$§W国までしか提携できません。現在、§Y$VAL$§Wカ国提携しています。"
  SENDGIFTTITLE:0 "贈り物"
- SENDGIFTDESC:0 "彼らを助けるためにお金を送ります。"
+ SENDGIFTDESC:0 "彼らを助けるために資金を送ります。"
  CANCEL_ANNEXDESC:0 "属国の併合を中止します。"
  INTEGRATEDESC:0 "同君連合国の統合を開始します。"
  CANCEL_INTEGRATEDESC:0 "同君連合国の統合を中止し、外交官を召還します。"
@@ -191,13 +191,13 @@
  JUSTIFY_TRADE_CONFLICTDESC:0 "あなたの交易を脅かす国との交易紛争を正当化します。"
  JUSTIFY_TRADE_CONFLICT_NO_POWER:1 "$WHO$はあなたが全体の$OURVAL|0%$以上の交易力を持つ交易ノードに交易力を持たなければなりません。"
  JUSTIFY_TRADE_CONFLICT_LOW_POWER:1 "$WHO$はあなたが全体の$OURVAL|0%$以上交易力を持つ交易ノードで、全体の$VAL|0%$以上の交易力を持たなければなりません。現在あなたが$MAXOURS|0%$持つ$NODE$で彼らは$MAX|0%$持っています。"
- TRANSFER_TRADE_POWERTITLE:0 "交易力を送出"
+ TRANSFER_TRADE_POWERTITLE:0 "交易力の移譲を強要"
  TRANSFER_TRADE_POWERDESC:0 "$WHO$があなたに交易力を送出したいか尋ねます。"
  TRANSFER_TRADE_POWER_SELECT_DESC:0 "$WHO$に対して交易力の一部を送出させる提案をしますか？"
- CANCEL_TRANSFER_TRADE_POWER_SELECT_DESC:0 "$WHO$との交易力送出関係を取り消したいですか？"
+ CANCEL_TRANSFER_TRADE_POWER_SELECT_DESC:0 "$WHO$との交易力の移譲関係を取り消しますか？"
  CANCEL_TRANSFER_TRADE_POWER_SELECT_DESC_GIVE_CB:0 "威信を$PRESTIGEHIT|R$失い、$WHOS$の外交評価が数年にわたって傷つくでしょう。この関係は講和条約によって決められたため、$WHO$は私たちに交易紛争の開戦事由を得るでしょう。"
- CANCEL_TRANSFER_TRADE_POWERTITLE:0 "交易力送出の中断"
- CANCEL_TRANSFER_TRADE_POWERDESC:0 "交易力送出関係を取り消します。"
+ CANCEL_TRANSFER_TRADE_POWERTITLE:0 "交易力の移譲の中断"
+ CANCEL_TRANSFER_TRADE_POWERDESC:0 "交易力の移譲関係を取り消します。"
  INFILTRATETITLE:0 "政府への潜入"
  CANCEL_INFILTRATETITLE:0 "政府への潜入の取り消し"
  SABOTAGETITLE:0 "評判失墜工作"
@@ -305,7 +305,7 @@
  ICON_GRANT_ELECTORATE:0 "選帝侯の任命"
  ICON_GRANT_FREECITY:0 "自由都市の任命"
  ICON_DEMAND_UNLAWFUL_TERRITORY:0 "不法な領土の返還要求"
- TRANSFER_TRADE_POWER:0 "交易力の送出"
+ TRANSFER_TRADE_POWER:0 "交易力の移譲を強要"
  THEYNOTATWAR:0 "彼らは誰かと戦争していません！"
  ENFORCEPEACE_CHOOSE_TARGET_NOTSTRONGENOUGH:0 "あなたは和平を強制する国よりも強い必要があります！"
  ENFORCEPEACE_NOINTERESTWHITEPEACE:0 "対象国は、この敵との白紙和平には関心がありません。"
@@ -327,16 +327,16 @@
  IS_NOT_FABRICATING_CLAIM:0 "請求権を捏造していない。"
  IS_JUSTIFYING_TRADE_CONFLICT:0 "交易紛争を正当化している。"
  IS_NOT_JUSTIFYING_TRADE_CONFLICT:0 "交易紛争を正当化していない。"
- TRADE_LEAGUE_MUST_TRANSFER_TO_LEADER:0 "貿易同盟の加盟国は同盟のリーダーに交易力を伝播しなければなりません。"
- TRADE_LEAGUE_WILL_TRANSFER_TO_LEADER:0 "貿易同盟のメンバーは、同盟のリーダーにそれを実行しなければならないため、まだ交易力を伝播することはできません。"
- SUBJECT_MUST_TRANSFER_TO_OVERLORD:0 "$SUBJECT_TYPE$は交易力を宗主国に送らなくてはなりません。"
- COLONY_MOST_TRANSFER_TO_OVERLORD:0 "植民地は交易力を宗主国に送らなくてはなりません。"
+ TRADE_LEAGUE_MUST_TRANSFER_TO_LEADER:0 "貿易同盟の加盟国は同盟指導国に交易力の移譲しなければなりません。"
+ TRADE_LEAGUE_WILL_TRANSFER_TO_LEADER:0 "貿易同盟の加盟国は、同盟指導国に交易力の移譲をしなければならないため、他に交易力の移譲をすることはできません。"
+ SUBJECT_MUST_TRANSFER_TO_OVERLORD:0 "$SUBJECT_TYPE$は宗主国に交易力の移譲をする必要があります。"
+ COLONY_MOST_TRANSFER_TO_OVERLORD:0 "植民地は宗主国に交易力の移譲をする必要があります。"
  NO_COMMON_TRADE_NODE:0 "いかなる交易ノードにおいても交易力を共有しません。"
  IS_TRANSFERING_TRADE_POWER:0 "彼らは既に我々に交易力を送っています。"
  IS_NOT_TRANSFERING_TRADE_POWER:0 "彼らは私たちに交易力を送っていません。"
  TRANSFERING_TO_OTHER:0 "彼らは既に$WHO$に対して交易力を送っています."
- CANT_TRANSFER_TRADE_POWER_SUBJECT_TYPE:0 "$SUBJECTTYPE$は宗主国のみに交易力を送ることができます。"
- CANT_TRANSFER_TRADE_POWER_PROTECTORATE:0 "保護国は宗主国のみに交易力を送ることができます。"
+ CANT_TRANSFER_TRADE_POWER_SUBJECT_TYPE:0 "$SUBJECTTYPE$は宗主国にのみ交易力の移譲ができます。"
+ CANT_TRANSFER_TRADE_POWER_PROTECTORATE:0 "保護国は宗主国にのみ交易力の移譲ができます。"
  DIP_DISCOVERY_TIP:0 "発見確率/日：§Y$VAL$§W%"
  DIP_FABRICATE_TIME:0 "請求権が捏造されるまでの日数：§Y$VAL$§W"
  DIP_FABRICATE_COMPLETION_DATE:0 "完了予定は§Y$DATE$§W"
@@ -671,7 +671,7 @@
  religious_friend:0 "異教徒と闘う兄弟"
  WE_NOTSAME_RELIGIONS_GROUP:0 "同じ宗教グループではありません。"
  NO_WAR_FIGHTING_WAR_TOGETHER:0 "あなたは戦争を共に戦っている国に対して宣戦布告することはできません。"
- NO_WAR_TRANSFER_TRADE_POWER:0 "交易力を伝搬する関係にある国と戦争を始めることはできません。"
+ NO_WAR_TRANSFER_TRADE_POWER:0 "交易力の移譲関係にある国と戦争を始めることはできません。"
  WE_GIVING_FLEET_ACCESS:0 "既に港湾使用許可を与えています。"
  WE_NOT_GIVING_FLEET_ACCESS:0 "港湾使用許可を与えていません。"
  SAME_OVERLORD:0 "同じ宗主国を持っています。"
@@ -708,7 +708,7 @@
  VASSAL_CANCEL_OPINION:0 "\n彼らは忠実であるため、我が国に対する評価が$OPINION|R$減少します。"
  VASSAL_CANCEL_CORES:0 "\n我が国が彼らの州に持つ全ての中核州と請求権を失います。"
  PROTECTORATEBREAKDESC:0 "保護国$COUNTRY$との主従関係を取り消しますか？\nこれにより安定度が§Y$STAB$§!下がり、威信が$PRESTIGE|R$減少し、我々の関係が悪化します。"
- PEACE_OFFER_POWER_COST:0 "この講和は$WHO$に$COST|Y$£dip£がかかります。"
+ PEACE_OFFER_POWER_COST:0 "この講和で$WHO$は$COST|Y$£dip£を払うことになります。"
  WARN_FAR_TOO_POWERFUL:0 "警告が真剣に受け取られるためには、あまりにも裕福で強力です。"
  GUARANTEE_FAR_TOO_POWERFUL:0 "保障が真剣に受け取られるためには、あまりにも裕福で強力です。"
  enemy:0 "敵対関係"
@@ -804,7 +804,7 @@
  CANCEL_DIPLOMAT_DIALOG_DESC:0 "$ACTIVITY$\n\n外交官を帰還させますか？"
  PEACE_EFFECT_PRESTIGE_DISHONORABLE:0 "$WHO$は戦争開始から$MONTHS$ヶ月の間に$WS|Y$を超える戦勝点を獲得し個別和平に調印することにより、追加で$PRESTIGE$の威信を得ます。"
  PEACE_EFFECT_PRESTIGE:0 "$WHO$が威信$VALUE$を獲得します。"
- PEACE_EFFECT_AGGRESSIVE_EXP:1 "この講和により$WHO$は$VALUE$の侵略的拡大の関係ペナルティを受けます。"
+ PEACE_EFFECT_AGGRESSIVE_EXP:1 "この講和により$WHO$は$VALUE$の侵略的拡大による関係ペナルティを受けます。"
  PEACE_EFFECT_OVEREX:0 "この講和により$WHO$に$VALUE$の過剰拡大が発生します。"
  ANNEX_NATION_ACCEPT_EFFECT:0 "併合を行うことによる影響："
  ANNEX_NATION_ESTIMATED_DONE2:0 "併合は条件が変化しない限り$DATE|Y$に完了し、毎月$VAL|Y$£dip£消費します。"
@@ -875,7 +875,7 @@
  SUBSIDY_POWERPROJ_EFFECT:0 "1つまたは複数のライバル（$RIVALS$）の敵国に補助金を与えることにより、戦力投射を合計$TOTAL$得ます。"
  MUST_WAIT_UNTIL_NEXT_ALLIANCE_OFFER:0 "別の提案を送れるようになるまで、一日待たなければなりません。"
  GUARANTEEING_THEIR_INDEPENDENCE:0 "彼らの独立を保障しています。"
- PEACE_PROVINCE_CORING_COST:0 "$COUNTRY$がすべての割譲された州を中核州にするためには §Y$ADM$§!£adm£必要です。"
+ PEACE_PROVINCE_CORING_COST:0 "$COUNTRY$が割譲された州をすべて中核化するには、§Y$ADM$§!£adm£かかります。"
  PEACE_OPTION_REQUIRES_DEMANDING_INDPENDENCE:1 "独立の要求をせずにこの要求を行うことはできません。"
  MUST_WAIT_UNTIL_NEXT_PEACE_OFFER:0 "別の和平案を送れるようになるまで、一日待たなければなりません。"
  PEACE_SUBJECT_WILL_CALL:0 "§R選択した場合、彼らの別の戦争へ参戦要請されます。§!"
