--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -956,12 +956,12 @@
  flavor_swe.1.a:0 "改革を行い、我々の土地を請求する！"
  flavor_swe.1.b:0 "物事はそのままにしておこう。"
  flavor_swe.2.t:0 "ヴェステロースの議会"
- flavor_swe.2.d:0 "スウェーデン解放戦争の最中、王家はハンザ同盟に大きな負債を抱えていた。そしてグスタフ・ヴァーサは強力な商人を率いるため、すぐにお金を必要としていた。1527年の夏、ヴェステロースの議会で、教会は銀貨や鐘などの有価物の形で国家に金を「貸す」義務があるとし、これにより彼はプロテスタントへの第一歩を踏み出した。その後数十年にわたり、スウェーデンはいくつかの暴動にもかかわらず、徐々に福音派の信仰に変わっていった。"
+ flavor_swe.2.d:0 "スウェーデン解放戦争の最中、王家はハンザ同盟に大きな負債を抱えていた。そしてグスタフ・ヴァーサは強力な商人を率いるため、すぐに資金を必要としていた。1527年の夏、ヴェステロースの議会で、教会は銀貨や鐘などの有価物の形で国家に金を「貸す」義務があるとし、これにより彼はプロテスタントへの第一歩を踏み出した。その後数十年にわたり、スウェーデンはいくつかの暴動にもかかわらず、徐々に福音派の信仰に変わっていった。"
  flavor_swe.2.a:0 "これは唯一の真の信仰だ！"
  flavor_swe.EVTNAME3227:0 "スウェーデンのワロン人"
  flavor_swe.EVTDESC3227:0 "1614年、ワロン人の起業家であるルイ・ド・ジェールはスウェーデンで商社を設立し、スウェーデン北部の鉄鉱業と鋳物工場の開発に着手した。すでにしばらく前から、エノー、ブラバント、ルクセンブルクのワロン人職人たちは、失業を逃れてスウェーデンに移住していた。熟練した金属工と鉱石精製業者の流入により、産業は活性化し、武器製造における大きな利点である鉄鋼の品質の大幅な改善へとつながった。スウェーデンは数十年の間に鉄鋼、大砲、銅、鉄の主要な輸出国となった。"
  flavor_swe.EVTOPTA3227:0 "ワロン人の移民を奨励する。"
- flavor_swe.EVTOPTB3227:0 "我々は興味がない。"
+ flavor_swe.EVTOPTB3227:0 "興味ないな。"
  flavor_swe.EVTNAME3228:0 "グスタフ・アドルフの軍事改革"
  flavor_swe.EVTDESC3228:0 "17世紀初頭に、スウェーデン王グスタフ・アドルフは、スウェーデンの軍事制度を改革するための一連の措置に取り組んだ。スウェーデンは、その時代の傭兵軍にはほとんど存在しなかった団結心と結束を部隊にもたらす、同じ地理的起源（都市、集落、村）に基づいた徴兵制度を中心として、職業軍を発展させるだろう。戦術的革新には、火力を最大化するためのより縦深が浅く横に伸びた編隊、軍種間の相互訓練、そして軽量かつ高機動の野戦砲が含まれていた。スウェーデンの新戦術教義は、重砲や動きの遅いテルシオを避け、火力と機動性を基にしていた。"
  flavor_swe.EVTOPTA3228:0 "地域での徴兵"
@@ -3606,7 +3606,7 @@
  flavor_fra.EVTNAME5:0 "王室の銃士たち"
  flavor_fra.EVTDESC5:0 "我々の軍隊の再編を監督している間、王は下位の貴族に開放されるメゾン・デュ・ロウ内に軍隊を編成し、彼らの軍事技術と王冠への忠誠を証明する機会を提供するという考えを思いついた。"
  flavor_fra.EVTOPTA5:0 "素晴らしい考えだ！"
- flavor_fra.EVTOPTB5:0 "私はむしろお金を維持したい。"
+ flavor_fra.EVTOPTB5:0 "私はむしろ金を維持したい。"
  flavor_fra.6.t:0 "メーヌの降伏"
  flavor_fra.6.d:0 "1444年に締結されたトゥール条約の中では、メーヌのフランスへの割譲が規定されている。だが実のところ、これはまだ承認されていない。メーヌを降伏させた者の一人として記憶されることを望むものは、イングランド政府内に一人として存在しないのだ。それどころか[Root.Capital.GetCapitalName]の大貴族たちは、我々の全権大使であったウィリアム・ド・ラ・ポールには、そもそもこの譲歩を行う権限はないとさえ主張している。フランスの使者たちは、条約の批准を繰り返し求めてきたが、ついに[FRA.Monarch.GetName]が自ら問題の解決に乗り出してきた。彼はル・マンの城壁前に現れ、都市の降伏を要求した。\nもしも今メーヌをフランスに割譲しなかったならば、戦争状態の再開に繋がることとなるだろう。"
  flavor_fra.6.a.tt:1 "フランスは停戦に違反した我々に対する戦争を開始するであろうし、その戦争では我々が攻撃者とみなされるであろう。"
@@ -3640,7 +3640,7 @@
  flavor_mal.1.t:0 "マリの権威への脅威"
  flavor_mal.1.d:0 "14世紀から15世紀初頭にかけて、我々の遠隔地域の支配はますます弱まっており、特に、ソンガイは我々への忠誠心を放棄している。今や、中心に近い人々はマリの弱い国家を要求しているが、ジョルフの西に住む人々は我々からの独立を要求している。我々はこの挑戦を我々の権威に委ねようとすることもできるが、それは大きなコストがかかるだろう。"
  flavor_mal.1.a:0 "マリの衰退はここで終わりだ！"
- flavor_mal.1.b:0 "いくらか譲歩できる…"
+ flavor_mal.1.b:0 "多少の譲歩は可能か…"
  flavor_son.1.t:0 "トンブクトゥの聖職者"
  flavor_son.1.d:0 "トンブクトゥの新しい支配者の信仰の欠如のために、地元のイスラム聖職者であるウラマーは失望している。すでに彼らは真のイスラム教徒の支配者よりもむしろ異教徒に近い言葉を広めており、彼の信仰の欠如は我々すべてを非難するであろう。ウラマーはすでに、$MONARCH$がイスラム信仰の要件に適合しない限り、新しい支配者を求めることになると脅しをかけている。"
  flavor_son.1.a:0 "アルコールと私の恋人たちとのパーティーをあきらめるというのか？決してない！"
