--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -6049,7 +6049,7 @@
  brb_sugar_capital:0 "ヨーロッパの砂糖産業の中心地"
  brb_sugar_capital_desc:0 "アントワープはヨーロッパの砂糖の中心地となった。アントワープはほぼ全ての大陸の輸入供給を行い、砂糖を作り出荷することの出来る精製業者の数はヨーロッパ屈指の一都市に含まれる。"
  brb_antwerp_banking:0 "アントワープの銀行"
- brb_antwerp_banking_desc:0 "アントワープはイタリアを除くと最も裕福で影響力を持つ銀行が存在する。我々は商人や貴族だけでなく、大国家の政府にもお金を貸し出している。"
+ brb_antwerp_banking_desc:0 "アントワープはイタリアを除くと最も裕福かつ影響力を持つ銀行の本拠地である。我々は商人や貴族だけでなく、大国の政府にも貸し出している。"
  brb_religious_tolerance:0 "寛容の伝統"
  brb_religious_tolerance_desc:0 "宗教的寛容はブラバント公国の伝統である。隠れユダヤ教徒はここでは歓迎され、改革派の多くの新興宗派もそうである。"
  brb_generality_lands:0 "連邦直轄領"
@@ -6602,7 +6602,7 @@
  vengeful_refugees:0 "復讐心に燃える難民"
  vengeful_refugees_desc:0 "イスラム教徒とモリスコ双方がイベリアのキリスト教徒によって追放された際、難民はマグレブに逃れた。これらの難民は、強制退去させられた事について全く喜んでおらず、彼らの崩壊につけこむ機会をしきりに受け入れている。"
  mazmorras:0 "マスモーラ"
- mazmorras_desc:0 "キリスト教徒の公爵たちは、我々の地下牢、非常に恐ろしいマスモーラについて恐ろしい話を語る。ここでは、最も価値の高い捕虜、安全帰還の為にお金を支払ってくれる裕福な家族の一員である者達を引き留める。典型的なマスモーラの状況は、身代金が迅速に支払われることを保証する。"
+ mazmorras_desc:0 "キリスト教徒の公爵たちは、我々の地下牢、非常に恐ろしいマスモーラについて恐ろしい話を語る。ここでは、最も価値の高い捕虜、安全帰還の為に金を支払ってくれる裕福な家族の一員である者達を引き留める。典型的なマスモーラの状況は、身代金が迅速に支払われることを保証する。"
  barbary_slave_trade:0 "バルバリアの奴隷貿易"
  barbary_slave_trade_desc:0 "略奪はバルバリア海岸の海賊にとって、キリスト教徒の奴隷がトルコやアラビアの市場で高値で売れる為、非常に儲かる仕事だ。"
  barbary_fortified_strongholds:0 "海賊拠点の要塞化"
