--- a/source/localisation/tradenodes_l_english.yml
+++ b/source/localisation/tradenodes_l_english.yml
@@ -73,8 +73,8 @@
  SHIP_POWER:0 "小型船からの交易力：§Y$VAL$§W"
  PREV_MAX_POWER:0 "下流の交易からの交易力：§Y$VAL$§W"
  TRADE_MISSION_OFFICE:0 "交易から資金を回収"
- TRADE_MISSION_TRANSIT:0 "交易力を送る"
- TRADE_MISSION_OFFICE_DESC:0 "交易から徴収することでお金を稼ぐことができます。首都の属する交易ノード以外では、商人を駐在させている間は徴収することができます。もし商人を召喚した場合は、その交易ノードからは交易力だけが送られます。"
+ TRADE_MISSION_TRANSIT:0 "交易力を送出"
+ TRADE_MISSION_OFFICE_DESC:0 "交易から徴収することで資金を稼ぐことができます。交易首都ノード以外では、商人を駐在させている限り徴収できます。もし商人を召喚した場合、その交易ノードは交易力を送出するだけになります。"
  TRADE_MISSION_TRANSIT_DESC:0 "交易首都を有さない、交易力があるどのノードも中継ノードとなります。あなたの力はそこで交易の繋がり、交易価値を下流へ連鎖させるでしょう。"
  NON_CAPITAL_OFFICE_2:0 "非交易首都での交易からの徴収：$VAL$"
  ENVOY_TRADING_TRADE_MISSION_TRANSIT:0 "$NAME$は§Y$PROV$§Wの交易力を移しています。"
@@ -107,19 +107,19 @@
  TRADE_CANCEL:0 "商人召喚"
  TRADE_CANCEL_TIME:0 "商人は§Y$DATE$§W日かけて帰国します。"
  TRADE_SEND_MERCHANT:0 "交易から徴収するために商人を派遣"
- TRADE_SEND_MERCHANT_DESC:0 "交易からの徴収は交易力を使用して収入を得ます。あなたの資本は恒久的に交易から徴収し、商人を配置することで交易力が向上します。他のノードに商人を配置することで、そのノードから交易からの徴収を得ることもできます。商人を呼び戻した場合はそのノードからは交易の送出のみとなります。"
+ TRADE_SEND_MERCHANT_DESC:0 "交易からの徴収は交易力を使用して収入を得ます。自国の首都は恒久的に交易から徴収し、商人を配置することで交易力が向上します。他のノードに商人を配置することで、そのノードから交易からの徴収を得ることもできます。商人を呼び戻した場合、その交易ノードは交易力を送出するだけになります。"
  TRADE_MERCHANT_ARRIVAL_TIME:0 "$NAME$はあと§Y$VAL$§W日で到着します。"
  TRADE_ENROUTE:0 "商人はすでにこのノードに向かっています。"
  TRADE_ENROUTE_STATUS:0 "途中"
  TRADE_MERCHANT_UNABLE:0 "商人を派遣できません。"
- TRADE_TRANSIT_NODE:0 "交易力を送るために商人を派遣"
+ TRADE_TRANSIT_NODE:0 "交易力を送出する商人の派遣"
  TRADE_TRANSIT_NODE_DESC:0 "中継ノードは、「下流」へのお金の流れを増やすためにあなたの交易力を使います。上流のノードにすでに交易力を持っている場合は、上流にも交易力を送ります。"
- TRADE_TRANSIT_NODE_CAPITAL:0 "あなたのホームノードは恒久的に交易の徴収を行うため、交易力をそこから送ることはできません。"
+ TRADE_TRANSIT_NODE_CAPITAL:0 "自国の交易首都ノードは恒久的に交易の徴収を行うため、そこから交易力を送出することはできません。"
  TRADE_LEADER_NAME_SORT_TOOLTIP:0 "交易力で並べ替え"
  TRADE_TRADER_SORT_TOOLTIP:0 "駐在商人の有無で並べ替えます。"
- TRADE_TRADER_SORT_TOOLTIP_DELAYED:0 "商人を配置すると、あなたの交易力が増大します。商人は交易から徴収したり、下流へ交易を送出したりできます。"
+ TRADE_TRADER_SORT_TOOLTIP_DELAYED:0 "商人を配置すると、自国の交易力が増大します。商人は交易から徴収したり、下流へ交易を送出したりできます。"
  TRADE_INCOME_SORT:0 "収入で並び替えます。"
- TRADE_INCOME_SORT_DELAYED:0 "収入は交易から徴収を通して直接得たり、交易の送出を通して下流へ送られます。"
+ TRADE_INCOME_SORT_DELAYED:0 "収入は交易から徴収を通して直接得たり、交易力を送出することで下流へ送られます。"
  TRADE_MISSION_SORT:0 "商人のミッションで並べ替えます。"
  TRADE_MISSION_SORT_DELAYED:0 "あなたの交易商は、資金を集めるか、下流の収集地点へ送金するか、上流の収集地点へ送金することができます。"
  TRADE_INCOME_MOD_SORT:0 "収入補正で並べ替えます。"
@@ -142,12 +142,12 @@
  TRADE_POWER_UPSTREAM:0 "§Y$COUNTRY$§Wは§Y$VAL$§Wの交易力を上流に送っている。"
  TRADE_CURRENT_POWER:0 "現在の交易力：§Y$VAL$§W"
  STEER_NO_TRADER:0 "交易を操縦するための交易力を送るには、まず商人を配置する必要があります。"
- TRANSFER_TRADE_POWER_TO:0 "§Y$OTHER$§!へ交易力を送る：§R-$VAL$§!"
+ TRANSFER_TRADE_POWER_TO:0 "§Y$OTHER$§!へ交易力を送出：§R-$VAL$§!"
  TRANSFER_TRADE_POWER_FROM:0 "§Y$OTHER$§!から交易力を受け取る：§G+$VAL$§!"
  TRADER_NOT_DISCOVERED:0 "交易ノードが発見されていません。"
  ADDED_VALUE_TRADE:0 "付加価値：§Y$VAL$§!"
  MERCHANT_DOWNSTREAM_BONUS:0 "下流の交易商からの転送：$VAL$"
- TRADE_POWER_UPSTREAM_DESC:0 "国家はすでに影響力のある上流の交易ノードへ交易力を送ることができます。"
+ TRADE_POWER_UPSTREAM_DESC:0 "国家はすでに影響力のある上流の交易ノードへ交易力を送出することができます。"
  NO_TRADE_COMPANY_NO_REGION:0 "この地域で交易会社を設立することはできません。"
  NO_TRADE_COMPANY_ON_OWN_CONTINENT:0 "あなたの本拠がある大陸に交易会社を設立することはできません。"
  CONFIRM_JOIN_TRADE_COMPANY_TITLE:0 "交易会社に州を割り当てる"
