--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -66,7 +66,7 @@
  TRADELEAGUE_MAX_SIZE_THEY:0 "加盟国は最大で一つの州を保持することができます。それ以上の州を得ると彼らは自動的に同盟を離脱することになります。"
  TRADELEAGUE_DEFENSIVE_PACT:0 "同盟のすべての加盟国は防衛戦争に参加します。"
  TRADELEAGUE_MEMBERSHIP_GIVES:0 "貿易同盟の効果："
- TRADELEAGUE_MEMBER_TRANSFER:0 "§R各加盟国はそのリーダーに交易力を伝播することに同意します。§!"
+ TRADELEAGUE_MEMBER_TRANSFER:0 "§R各加盟国はその指導国への交易力の移譲に同意します。§!"
  TRADELEAGUE_TRADING_BONUS:0 "商人共和国によって交易がなされている州は乗算される："
  ICON_TRADELEAGUEINVITE:0 "貿易同盟に参加するよう§Y招待§!"
  ICON_TRADELEAGUEREQUEST:0 "あなたの貿易同盟への参加の§Y要求§!"
