--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -19,7 +19,7 @@
  orthodox_icon_events.4.d:0 "国中の教会のドームの多くに描かれた、全ての支配者たる、全能者ハリストスは天上から見ている。聖障にて最も中央の聖像に対する我等の尊崇と広大にわたる配慮は思索の源となっているようだ。創造と[Root.Monarch.GetTitle]の中での正しき位置における彼の役割を思うと、多くの者は彼らの生活と統治する政府にもっと満足するだろう。"
  orthodox_icon_events.4.a:0 "彼の者は王国のために。"
  orthodox_icon_events.5.t:0 "三賜物のニコライ"
- orthodox_icon_events.5.d:0 "我等の聖ニコライへの崇拝は[benevolent_if_distant_neighbor.GetName]から最近来た外交官にいた商人の一人を全く感銘を与えたようだ。その商人は[nicholas_icon_was_here.GetCapitalName]にある聖ニコライの聖像に、その聖人の物語に、そしてニコライの伝説への我々の信心にそれはそれは感動し、三つの品をささげることに決めた。一つの贈り物は彼が聖像を見たところの大聖堂へと行き、一つはそれを作った芸術家のところへ行き、一つはそれにお金を払った後援者のところに行った。"
+ orthodox_icon_events.5.d:0 "我々の聖ニコライへの崇拝は[benevolent_if_distant_neighbor.GetName]から最近来た外交団にいた商人の一人に大きな感銘を与えたようだ。その商人は[nicholas_icon_was_here.GetCapitalName]にある聖ニコライの聖像に、その聖人の物語に、そしてニコライの伝説への我々の信心にそれはそれは感動し、三つの品をささげることに決めた。一つの贈り物は彼が聖像を見たところの大聖堂へと行き、一つはそれを作った芸術家のところへ行き、一つはそれに資金を出した後援者のところに行った。"
  orthodox_icon_events.5.a:0 "教会に代わって彼に感謝しなければ。"
  orthodox_icon_events.5.b:0 "感謝の印として、芸術家を起用しよう。"
  orthodox_icon_events.5.c:0 "後援者への何と寛大なる贈り物か。"
@@ -333,7 +333,7 @@
  desc_streltsy_garrison:0 "ストレリツィの徴兵で、我が国は全国民に魅力的な手段を提案できるようになった。多くの場合、これが意味するのは我が国の要塞により多くの人員と装備を配置でき、我が国は以前よりも固い防備で守られたということだ。"
  streltsy_events.1.t:0 "ストレリツィの抗議"
  streltsy_events.1.d:0 "我が国の長引く戦争はストレリツィ部隊を疲弊させた。生涯を兵士として過ごすために、平和な時には家族を養い、家業を行っていたので、長期の戦争によってこの生活が困難になってしまった。ストレリツィの兵士の代表が今日[Root.Capital.GetCapitalName]に到着し、故郷に帰るかさもなくばより高い給料を払うよう求めてきた。"
- streltsy_events.1.a:0 "我が国は、ある程度の譲歩はできる。"
+ streltsy_events.1.a:0 "多少の譲歩は可能だ。"
  streltsy_events.1.b:0 "奴らは連隊に戻るか脱走の罪に問われなければならない。"
  streltsy_events.1.b.tt:0 "これはストレリツィの反乱を引き起こすかもしれない。\n反乱の機会は戦争疲弊度があると増加する。"
  streltsy_events.1.c:0 "持ち場から離れたことを理由に処刑しよう。"
