Save/Update files [ci skip]

--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -2281,7 +2281,7 @@
  desc_pirate_triangle_trade:0 "他の人よりも自由な海賊の生活もある。"
  desc_pirate_a_pirate_fleet:0 "船舶は最大ではないまたは最も設備が整っていないかもしれないが、彼らは最高の名を持っている。"
  desc_pirate_a_scourge_on_the_seven_seas:0 "ああ船長、私の船長よ！"
- desc_pirate_the_pirate_code:0 "厳密にどれだけの条項が海賊の掟を構成しているかに関して意見の相違はあるが、海賊は重要なことを覚えている。"
+ desc_pirate_the_pirate_code:0 "厳密にどれだけの条項が海賊の掟を構成しているかに関して意見の相違はあるが、海賊達にとって重要なことは一つだけだ。"
  desc_pirate_diplomacy:0 "我々を解放者と見なす人もいるが、ほとんどはそうは見ない。"
  desc_pirate_the_pirate_threat:0 "自由を脅かす強力な敵ほど、海賊を団結させるものはない。"
  desc_pirate_a_second_madagascar:0 "全ての自由な男女の為の安全な避難所だ。とはいえ、私は赤いコートを着用しないよう勧める。"
