--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -176,7 +176,7 @@
  devotion_events.1.t:0 "総合病院"
  devotion_events.1.d:0 "貧困層を歓迎し助けてくれる場所を作るため、総合病院を設立することが提案されている。公衆衛生は非常に重要であり、無料の産婆術の一式を提供し、病気と闘う施設があることで誰もが幸福を増すことだろう。"
  devotion_events.1.a:0 "これが公衆衛生を改善するならば何のために待っているのだ？やれ！"
- devotion_events.1.b:0 "聖職者が彼等の問題を解決するだろう。こんなことに費やす資金はない。"
+ devotion_events.1.b:0 "聖職者が彼らの問題を全て解決するだろう。こんなことに金を捨てるな！"
  devotion_events.2.t:0 "要塞の維持"
  devotion_events.2.d:0 "我々の要塞は、侵入者や敵に対するもっとも重要な防御であるが、それらは大規模な修復を行う必要がある。我々はこの資金を調達するため、税金を増やす必要があるが、それは確実に、税金を払う人々に動揺を与えるだろう。"
  devotion_events.2.a:0 "我々にはこれが必要なのだ。民衆など無視しろ！"
@@ -1598,7 +1598,7 @@
  karma_too_high:0 "高いカルマ"
  karma_too_low:0 "低いカルマ"
  TOTAL_OF:0 "合計"
- AE_TOOLTIP_HEADER_0:0 "これにより§Y$WHO$§!は§Y$TOTAL$§!ヶ国の評価に§R$LOWEST$§!から§R$HIGHEST$§!の侵略的拡大の関係ペナルティが発生します。"
+ AE_TOOLTIP_HEADER_0:0 "これにより§Y$WHO$§!は§Y$TOTAL$§!ヶ国との間に§R$HIGHEST$§!〜§R$LOWEST$§!の侵略的拡大による関係ペナルティが発生します。"
  AE_TOOLTIP_HEADER_1:0 "これらの国々は§Y$WHO$§!に対する包囲網に参加する可能性があります：\n"
  AE_TOOLTIP_HEADER_2:0 "§Y$WHO$§!は低い関係のため以下の同盟国を失います：\n"
  AE_TOOLTIP_HEADER_NO_AE:0 "§Y$WHO$§!は侵略的拡大のペナルティを何ら受けないでしょう。"
