--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -119,7 +119,7 @@
  promote_territorial_rights:0 "領有権の主張"
  will_of_the_martyrs:0 "殉教者の意思"
  TAKEONDEBTTITLE:0 "債務の引受け"
- TAKEONDEBTDESC2:0 "我々は彼等の債務を代わりに完済します。"
+ TAKEONDEBTDESC2:0 "我々は彼らの債務を代わりに完済します。"
  TAKEONDEBTDESC:0 "列強として、我々は貧困に喘ぐ$COUNTRY|Y$を経済的な混乱から回復させ、彼らの$COST|Y$¤の債務を全て支払おうとします。"
  TAKEONDEBTDESC3:0 "これは彼らにとって、約$NUM_LOANS|Y$の標準規模の借款に相当するため、彼らの我々に対する評価は合計$OPINION$（最大$MAX$までの借款ごとに$OPINION_PER_LOAN$ずつ）向上するでしょう。"
  INFLUENCENATIONTITLE:0 "国家への影響"
@@ -169,7 +169,7 @@
  BREAKALLIANCE_ONLY_SELF:0 "$THEM|Y$の同盟国は我が国のみです。"
  BREAKALLIANCE_TARGET_SUBJECT:0 "§R$THEM|Y$は$OVERLORD|Y$の従属国であるため、我々は彼らの同盟関係を破棄するよう要求することはできません。§!"
  BREAKALLIANCE_TARGET_AT_WAR:0 "§R$THEM|Y$が我々と戦争中の間は、我々が彼らに同盟を破棄するよう求めることはできません。§!"
- BREAKALLIANCEDESC2:0 "我々は彼等に同盟関係の一つを破棄するように要求します。"
+ BREAKALLIANCEDESC2:0 "我々は彼らに同盟関係の一つを破棄するように要求します。"
  BREAKALLIANCE_REQDES1:0 "列強$ACTOR|Y$は、我々が$THEM|Y$との同盟を破棄するよう要求します。\nこれにより、我々と$ACTOR|Y$の間は停戦となり、我々が持つ$THEM|Y$とのその他の外交条約は取り消されます。"
  BREAKALLIANCE_NO_PRESTIGE:0 "あなたの脅威を実感させるためには威信が正の値でなければなりません。"
  ICON_BREAK_ALLIANCE:0 "我々は我々の同盟関係の一つを破棄する要求を受けています。"
@@ -228,7 +228,7 @@
  OVERLORD_BESTOWED_GIFTS:0 "我々に$GIFT$¤の贈り物を送ります。"
  SEND_ADDITIONAL_TROOPS_TITLE:0 "追加の部隊を派遣"
  SEND_ADDITIONAL_TROOPS_TOO_MUCH:0 "我々は必要な$MANPOWER|R$£icon_manpower£を持っていません。"
- SEND_ADDITIONAL_TROOPS_SUBJECT_NO_WAR:0 "彼等は戦争中ではありません。"
+ SEND_ADDITIONAL_TROOPS_SUBJECT_NO_WAR:0 "彼らが戦争中ではありません。"
  SEND_ADDITIONAL_TROOPS_DESCRIPTION:0 "彼らの戦争を支援するため$SUBJECT|Y$に$AMOUNT|Y$£icon_manpower£を送ります。これはまた、独立欲求を§G$LD$%§!低減させるでしょう。"
  OVERLORD_SENT_ADDITIONAL_TROOPS:0 "我々に$MANPOWER$£icon_manpower£を送ります。"
  DEMAND_ARTIFACTS_TITLE:0 "芸術品の要求"
@@ -459,9 +459,9 @@
  desc_inspired_soldiers:0 "この地域の兵士たちは、地域社会の信心深さによって活力を与えられている。"
  coptic_flavor.101.t:0 "略奪された修道院"
  coptic_flavor.101.d:0 "我々の州の一つは、最近になって盗賊の襲撃により略奪された古い修道院の修復のための資源と支援を求める代表者を送ってきた。石の壁の基礎は数世代前に建てられたものだが、その地域の人々は建物を回復させると同様に、聖なる礼拝のかがり火とすることを強く望んでいる。社会に与えられた援助は地元住民に感動を与えるかもしれない。"
- coptic_flavor.101.a:0 "彼等に幾許かの援助を送ろう。"
+ coptic_flavor.101.a:0 "彼らに幾許かの援助を送ろう。"
  coptic_flavor.101.a.tt:0 "修道院は再建されるでしょう。"
- coptic_flavor.101.b:0 "彼等は家で祈りを捧げることもできるだろう。"
+ coptic_flavor.101.b:0 "彼らは家で祈りを捧げることもできるだろう。"
  coptic_flavor.101.b.tt:0 "代表団は失望の中で帰還しました。"
  monastery_repaired:0 "再建された修道院"
  desc_monastery_repaired:0 "ここで焼失した修道院は迅速に再建されました。"
@@ -1141,17 +1141,17 @@
  TRADING_CITY_NEW_DESC:0 "新しい交易都市を作り、それらの首都として§Y$PROVINCE$§!を与えますか？"
  rr_girondists:0 "ジロンド派"
  rr_girondists_influence:0 "ジロンド派の影響"
- rr_girondists_FACTION_DESC:0 "ジロンド派は革命が国内で制御不能にならないように、国外で革命を広げることを望んでいる。彼等は積極的外交政策で大陸の反革命的体制を終わらせられることを信じているのだ。"
+ rr_girondists_FACTION_DESC:0 "ジロンド派は革命が国内で制御不能にならないように、国外で革命を広げることを望んでいる。彼らは積極的外交政策で大陸の反革命的体制を終わらせられることを信じているのだ。"
  support_rr_girondists_title:0 "ジロンド派を促進"
  support_rr_girondists_desc:0 ""
  rr_royalists:0 "帝国派"
  rr_royalists_influence:0 "帝国派の影響"
- rr_royalists_FACTION_DESC:0 "帝国派は革命を制御下に置き、権力を再度集権化することを望んでいる。人々の意思を尊重することは主張しているが、制御不能な世論の暴走が引き起こす恐怖を嫌悪している。帝国派が主導権を握った場合、彼等は革命的な帝国の形成を望むだろう。"
+ rr_royalists_FACTION_DESC:0 "帝国派は革命を制御下に置き、権力を再度集権化することを望んでいる。人々の意思を尊重することは主張しているが、制御不能な世論の暴走が引き起こす恐怖を嫌悪している。帝国派が主導権を握った場合、革命的帝国の形成を望むだろう。"
  support_rr_royalists_title:0 "帝国派を促進"
  support_rr_royalists_desc:0 ""
  rr_jacobins:0 "ジャコバン派"
  rr_jacobins_influence:0 "ジャコバン派の影響"
- rr_jacobins_FACTION_DESC:0 "ジャコバン派は、人気のある革命の忠実な支援者である。彼等は古い支配階級を強制的に退場させ、その資産を没収することを望んでいる。この派閥は首都の大衆の支持を得ており、彼等を革命の目的の推進のために暴力へ導くことを恐れてはいない。"
+ rr_jacobins_FACTION_DESC:0 "ジャコバン派は、人気のある革命に忠実な支援者である。彼らは古い支配階級を強制的に退場させ、その資産を没収することを望んでいる。この派閥は首都の大衆の支持を得ており、大衆を革命の目的の推進のために暴力へ導くことを恐れてはいない。"
  support_rr_jacobins_title:0 "ジャコバン派を促進"
  support_rr_jacobins_desc:0 ""
  consort_events.1.t:0 "結婚の提案"
@@ -1512,7 +1512,7 @@
  revolutionary_republic_factions.0.t:0 "軍の混乱"
  revolutionary_republic_factions.0.d:0 "旧体制の束縛を打ち破り、出自と昇進の間の拘束からようやく軍の士官の頂点が解放された。間違いなく、我々の軍隊はすぐに貴族の古い一群を上回る能力ある兵士たちによって率いられるだろう。しかし、今のところ、最下層の新兵が急増しただけでなく、経験豊富な士官たちが突然不足したことで、我々の階級でやや不安定な雰囲気をもたらしている。愛国心と革命的な情熱は強い動機であるが、有能な指導者がなければ、いかなる軍隊も期待に応えることはできない。"
  revolutionary_republic_factions.0.a:0 "我々はイデオロギーと妥協することは決してできない！"
- revolutionary_republic_factions.0.b:0 "野心的な男こそ必要だ。彼等に軍隊の再建を任せよう！"
+ revolutionary_republic_factions.0.b:0 "野心的な男こそ必要だ。彼らに軍隊の再建を任せよう！"
  revolutionary_republic_factions.0.c:0 "我々は今、高い品質の古参兵を維持するため、できることをするべきだ。"
  revolutionary_republic_factions.1.t:0 "束縛の欠如によって…"
  revolutionary_republic_factions.1.d:1 "旧体制は常に聖職者の力に強く結びついており、神への恐れは、我々の急進派が最も嫌う、人々を支配する方法の一つである。したがって、宗教的な財産を没収し、国民議会においてすべての聖職者が、多くの議題について市民憲法への忠誠を誓う必要性が高まっている。急進派を除いては、議会の全員が最善の行動方針に同意しているわけではなく、我々の政策は時の中で少し揺らいでいる。無神論は常に大衆に最も人気があるわけではなく、特に田舎では地元の司祭に対する我々の行動は軽蔑で満たされている。\nあるいは、宗教から社会を解放するという長期的な目標を放棄することなく、我々の急進主義を少しでも元に戻すことが有益だろうか？"
