--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -300,7 +300,7 @@
  pirates.19.a:0 "売却禁止を続けろ。"
  pirates.19.b:0 "売却禁止を解除してやれ。"
  pirates.20.t:0 "海賊の黄金時代"
- pirates.20.d:0 "植民地勢力間での戦争は流血の惨事であり、戦争が引き起こした破壊と悪行の爪痕が残されている。カリブ海では海賊行為が横行している。以前は私掠船に黒旗を掲げさせていたが、平時においては利益への悪影響があることが判明し、戦争の結果によって決定権を奪われた海軍船長は、以前のような主権を認められなかった。このような大国間での対立は意図せず海賊の黄金時代の幕開けとなってしまった。"
+ pirates.20.d:0 "植民地国家間での戦争は流血沙汰となり、破壊と悪行の爪痕が残される。カリブ海では海賊行為が横行している。かつての私掠船は、平時などというのは儲けにならないと悟って黒旗を掲げるようになっている。一方、戦後処理で権限が剥奪された海軍の船長たちは、かつての君主の命令に従おうとしない。このような大国間での対立は意図せず海賊の黄金時代の幕開けとなってしまった。"
  pirates.20.a:0 "なんて傍迷惑な。それとも絶好の機会になるか？"
  golden_age_of_piracy_tooltip:0 "§Y海賊の黄金時代§!によって与えられる補正は50年間有効になります。"
  golden_age_of_piracy:0 "海賊の黄金時代"
