Save/Update files [ci skip]

--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -245,7 +245,7 @@
  pirates.5.a:0 "我がための海賊人生よ！"
  pirates.5.b:0 "テトゥアンから治めよう。"
  pirates.6.t:0 "ポート・ロイヤルの海賊"
- pirates.6.d:0 "[spanish_main_country.GetAdjective]の船積みを攻撃することを目標に、カリブ海の私掠を生業とする船長たちに、多くの私掠免許状を与えてきました。これら私掠船の船長たちは、略奪の機会に多く恵まれる[487.GetName]にある街、ポートロイヤルを本拠地としました。\n\nポートロイヤルの当局の盗品を取り扱う意欲は、あまり旨みの少ないモノも引き寄せました。何の私掠免許状を持たず、全ての君主が認めていない海賊がこの島に基地を作り始めています。無法であるという魅力は我が私掠船の組員たちには失われていません。すでに職務を捨て、海賊となった者たちもいます。[Root.Capital.GetCapitalName]の噂話は、ポートロイヤルが海賊のユートピア、新世界のソドムになったということです。"
+ pirates.6.d:0 "[spanish_main_country.GetAdjective]の海運を襲撃させることを目的として、カリブ海にいる意欲的な私掠船長たちに多数の私掠免許状を与えてきた。彼らは[487.GetName]にある街、ポートロイヤルを本拠地としてきた。ここは掠奪の機会に恵まれた場所なのだ。\n\nポートロイヤルの当局が積極的に盗品を取り扱っていることにより、あまり旨みのないモノも引き寄せられてきた。私掠免許状を持たず、どこの国からも認められていない海賊が、この島に基地を作り始めている。無法であるという魅力は私掠船長たちにとって抗いがたいものがある。すでに職務を捨て、海賊に転身した者たちもいる。[Root.Capital.GetCapitalName]は、ポートロイヤルが海賊のユートピア、新世界のソドムになったという噂で持ちきりだ。"
  pirates.6.a:0 "我がための海賊人生よ！"
  pirates.6.b:0 "ポート・ロイヤルの秩序を回復せねばならぬ。"
  pirates.7.t:0 "同胞会議"
