--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -409,7 +409,7 @@
  alert_can_use_tribal_federation_ability_delayed:0 "$POWERS|Y$は現在要求可能です。"
  IQTA_TAXATION_POLICY_PERIOD:2 "この期間中、あなたは別のイクター制税政策を制定できません。"
  RELIGIOUS_SCHOLAR_EXPIRY_TITLE:0 "宗教学者は去った"
- RELIGIOUS_SCHOLAR_EXPIRY_SETUP:0 "宗教学者が我が国を去った時"
+ RELIGIOUS_SCHOLAR_EXPIRY_SETUP:0 "宗教学者が我が国を去ったとき"
  RELIGIOUS_SCHOLAR_EXPIRY_HEADER:0 "宗教学者は去った"
  RELIGIOUS_SCHOLAR_EXPIRY_1:0 "$MOD$"
  RELIGIOUS_SCHOLAR_EXPIRY_2:0 "以下において期限切れとなりました。"
@@ -844,7 +844,7 @@
  STATE_JANISSARIES_DESC:2 "§Yオスマン政府§!であることにより、異教徒の州でイェニチェリを徴兵可能。異教徒の開発度が大きいほど、より多くのイェニチェリを引き出すことができる。"
  RELIGIOUS_SCHOOL_MAP_ICON_TOOLTIP:0 "$COUNTRY$$FLAG$は$SCHOOL|Y$に従っています。"
  DISBAND_UNIT_RETURN_MANPOWER_CAPPED:0 "最大人的資源$MAX|Y$を超えることはできないため、兵士の内$NUMBER|Y$人だけ、人的資源に戻ります。傭兵は戻りません。"
- CENTER_HAS_NO_PROVINCES_TO_CONVERT:0 "§R改宗完了！すべての適格な州ですでに改宗が完了しています。§!\n"
+ CENTER_HAS_NO_PROVINCES_TO_CONVERT:0 "§R改宗完了！対象となるすべての州ですでに改宗が完了しています。§!\n"
  PROVINCES_LEFT_TO_CONVERT:0 "$NUM|Y$の州の改宗が可能です。\n"
  CONFIRM_HOTJOINERS:0 "HOTJOINしているプレイヤーの確認"
  ACCEPTED_HOTJOINERS:0 "以下のプレイヤーがゲームに参加します："
