--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2604,7 +2604,7 @@
  flavor_bur.EVTOPTB3:0 "そのままにしておけ。"
  flavor_bur.EVTDESC4:0 "最後のブルゴーニュ公の死は、国の未来を不確かなものにした。近隣諸国と王室間の婚姻によって結ばれた国々はすでに介入する機会をうかがっている。フランスは既にフランスの地域に属する部分を請求している。\n\nブルゴーニュの土地の一部は神聖ローマ帝国内にある。おそらく我々の法的権利としてそれらの地域を請求すべきだろうか？"
  flavor_bur.EVTDESC5:0 "最後のブルゴーニュ公の死は、国の未来を不確かなものにした。そこに介入することを計画している他国の噂がすでにあるが、婚姻を通じて[Root.Monarch.Dynasty.GetName]は最後のブルゴーニュの支配者の正当な後継者である。我々は確実に土地が正当に我々に属することを主張すべきだろうか？"
- flavor_bur.EVTDESC6:0 "最後のブルゴーニュ公の死は、国の未来を非常に不確かなものにした。いくつかの国がすでに土地を継承する機会をうかがっているが、彼らのいずれも資格のある主張を持っているとは思えないので、確実に我々は隣国としてブルゴーニュの人々を守るために土地に介入しなければならない。"
+ flavor_bur.EVTDESC6:0 "最後のブルゴーニュ公の死は、国の未来を非常に不確かなものにした。いくつかの国がすでに土地を継承する機会をうかがっているが、彼らの主張はいずれも適格とは思えない。隣国である我らこそがブルゴーニュの人々を保護するため、介入してその地を併合するべきだ。"
  flavor_bur.EVTNAME7:0 "ブルゴーニュ州の回復"
  flavor_bur.EVTDESC7:0 "ブルゴーニュの継承危機の間に我々が保有したある州は、神聖ローマ帝国の他の加盟国が請求している。彼らは、これらの州を回復することを要求している。"
  flavor_bur.EVTOPTA7:0 "彼らにこれらの土地を授ける。"
