--- a/source/localisation/hinduism_l_english.yml
+++ b/source/localisation/hinduism_l_english.yml
@@ -211,7 +211,7 @@
  hindu_events.47.d:0 "あなたの身体を水とエッカの葉で清めた後、あなたは[Root.Capital.GetCapitalName]の偉大な太陽の寺院に向かう。[Root.GetName]全国からの多くのカーストの人々は、提供する水、花、果物を持参し、寺院や宮殿では大きな行列が見られる。スーリヤの曼荼羅は祝典のために飾られ、訪問した信者たちは冬が再び過ぎ去った崇拝と喜びの中で結びついている。"
  hindu_events.47.a:0 "太陽を称えよ！"
  hindu_events.48.t:0 "スーリヤの子"
- hindu_events.48.d:0 "ここしばらく[Root.GetName]には適格な後継者がいないことで、[Root.Monarch.Dynasty.GetName]一族の者たちは懸念している。適切な系統の王女は、最近、彼女が未婚であるという事実さえなければ、次に王位に就くであろう子供を出産した。\n\nしかし、マハーバーラタの伝説に精通している彼女は、スーリヤ自身によって偉大な王カルナが処女からどのように生まれたのかを語っている。王女は彼女が伝説の王女が妊娠したマントラについて非常に多くを学んでおり、太陽の子である彼女の子は偉大なものに運命づけられていると説明している。"
+ hindu_events.48.d:0 "ここしばらく[Root.GetName]に適格な後継者がおらず、[Root.Monarch.Dynasty.GetName]一族の者たちは懸念している。良家の姫の1人が最近、次に王位に就くであろう子供を出産した。彼女が未婚であるという事実さえなければ。\n\nしかし、マハーバーラタの伝説に精通している彼女は、偉大な王カルナがスーリヤとの子として処女から生まれた経緯を語る。彼女自身も伝説の王妃が妊娠したマントラを学んでおり、彼女の子は太陽の子として偉業をなす運命だと、姫は説明している。"
  hindu_events.48.a:0 "スーリヤは我々を祝福した！これは太陽の王朝の始まりとなるだろう。"
  hindu_events.48.b:0 "処女懐胎だと？あなたはその話をキリスト教徒にでも伝えるがいいさ。"
  hindu_events.49.t:0 "バーラー"
