Save/Update files [ci skip]

--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -4713,7 +4713,7 @@
  CONFIRMACCEPTANCETEXT:0 "本当に§Y$NAME$§Wの要求を受け入れますか？"
  TOLERANCE_TO_RELIGION_LESS_THAN:0 "宗教への寛容度が右記未満である："
  TOLERANCE_TO_RELIGION_GREATER_THAN:0 "宗教への寛容度が右記以上である："
- ANY_KNOWN_COUNTRY_STARTS:0 "あらゆる既知の国家"
+ ANY_KNOWN_COUNTRY_STARTS:0 "いずれかの既知の国家"
  EXTRA_NATIONALISM_DESC:0 "$WHERE$の分離主義を$VALUE$年間$DIRECTION$。\n"
  MODIFIER_TOLERANCE_OWN:0 "真の信仰の寛容度"
  MODIFIER_TOLERANCE_HERETIC:0 "異端の寛容度"
@@ -6415,7 +6415,7 @@
  desc_founding_father:0 "我々は、植民地の人々が、我々が行う地方政治についてより多くのことを理解しているという、滑稽な政治的アイデアを説く、この州のいく人かの奇妙な革新派の人々を抱えている。"
  loyalist_stronghold:0 "王党派の強化"
  desc_loyalist_stronghold:0 "この州は、適切な政府に忠実である、真の保守派の信者で満ちており、彼らは保護されなければならない。"
- ANY_CORE_STARTS:0 "あらゆる中核国家"
+ ANY_CORE_STARTS:0 "いずれかの中核州主張国家"
  advancement_of_true_religion_act_title:0 "真実の宗教の進歩法の可決"
  advancement_of_true_religion_act_desc:0 "聖職者や貴族のためにその権利を留保するため、召使いなどが我々の聖書を読むような行為を法的犯罪とする。"
  blasphemy_act_title:0 "冒涜禁止法の可決"
