--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -636,7 +636,7 @@
  dlc018_reason_tc_reason:1 "\n交易会社から利益を受ける海外帝国を設立するのに適した国家を選択しているため、このDLCを推奨します。"
  dlc066_reason_emperor_reason:0 "\n§Y中華皇帝§!を選択しているため、このDLCを推奨します。"
  DLC_dlc101_TOOLTIP_INSTANT:0 "Emperor"
- DLC_dlc101_TOOLTIP_DELAYED:1 "- ヨーロッパのミッションツリー\n- 枢機卿の任命\n- 教皇勅書\n- 教皇の十分の一税\n- トリエント公会議\n- Imperial Incidents\n- 新しい帝国改革\n- 革命熱\n- 革命の中心地\n- レベル化された信仰の擁護者\n- フス派の教会のアスペクト\n- 覇権"
+ DLC_dlc101_TOOLTIP_DELAYED:1 "- ヨーロッパのミッションツリー\n- 枢機卿の任命\n- 教皇勅書\n- 教皇の十分の一税\n- トリエント公会議\n- 帝国事件\n- 新しい帝国改革\n- 革命熱\n- 革命の中心地\n- レベル化された信仰の擁護者\n- フス派の教会のアスペクト\n- 覇権"
  DLC_dlc102_TOOLTIP_INSTANT:0 "Balkan Unit Pack"
  DLC_dlc102_TOOLTIP_DELAYED:0 "- バルカン国家向け16種類の新しいユニットモデル"
  DLC_dlc103_TOOLTIP_INSTANT:0 "Beyond the Alps Unit Pack"
@@ -645,7 +645,7 @@
  DLC_dlc104_TOOLTIP_DELAYED:0 "- イタリア、ドイツ、神聖ローマ帝国とロタリンギア向け5種類の新しいユニットモデル"
  DLC_dlc105_TOOLTIP_INSTANT:0 "Emperor Music Pack"
  DLC_dlc105_TOOLTIP_DELAYED:0 "- ヨーロッパ国家向け3種類の楽曲"
- LANDING_dlc101_TEXT:0 "主な機能：\n- ヨーロッパのミッションツリー\n- 枢機卿の任命\n- 教皇勅書\n- 教皇の十分の一税\n- トリエント公会議\n- Imperial Incidents\n- 新しい帝国改革\n- 革命熱\n- 革命の中心地\n- レベル化された信仰の擁護者\n- フス派の教会のアスペクト\n- 覇権"
+ LANDING_dlc101_TEXT:0 "主な機能：\n- ヨーロッパのミッションツリー\n- 枢機卿の任命\n- 教皇勅書\n- 教皇の十分の一税\n- トリエント公会議\n- 帝国事件\n- 新しい帝国改革\n- 革命熱\n- 革命の中心地\n- レベル化された信仰の擁護者\n- フス派の教会のアスペクト\n- 覇権"
  LANDING_dlc101_FLAVOR_TEXT:0 "近世初期に関するParadox Development Studioの旗艦となるゲームへの拡張により、帝国を拡大する新たな方法を発見してください。Europa Universalis IV：Emperorは、近世の世界を支配するためのあなたの取り組みに、新しい深みと選択肢をもたらします。あなたの統治を何世紀にもわたり耐え忍ばせることはできるでしょうか？\n\nEmperorはヨーロッパ諸国のゲーム体験を改善することに焦点を当て、カトリック国家に大きな深みと、よりエネルギッシュで相互作用的な神聖ローマ帝国を加えます。革命は野火のように広がり、熱狂的な改革の要求に巻き込まれたくない王国から行動が求められます。"
  LANDING_dlc102_TEXT:0 "主な要素：\n- バルカン国家向け16種類の新しいユニットモデル"
  LANDING_dlc102_FLAVOR_TEXT:0 "バルカン国家向け16種類の新しいユニットモデルにより、Europa Universalis IVのプレイ体験を高めましょう。"
@@ -657,7 +657,7 @@
  LANDING_dlc105_FLAVOR_TEXT:0 "近世ヨーロッパからインスピレーションを得たオリジナルの3つの楽曲をお楽しみください。"
  dlc101_reason_pope:0 "「§YEmperor Expansion§!」はトリエント公会議、教皇勅書、教皇の十分の一税、枢機卿の任命機能といった§Y教皇領§!及びカトリック国家用の新しいシステムを追加します。また、§Y教皇領§!用の改良されたミッションツリーも追加します。"
  dlc101_reason_pope_reason:0 "\n§Y教皇領§!を選択しているため、このDLCを推奨します。"
- dlc101_reason_hre_emperor:0 "「§YEmperor Expansion§!」はImperial Incidentsなどの神聖ローマ帝国のシステムや、帝国を集権化または分権化する機能を追加します。"
+ dlc101_reason_hre_emperor:0 "「§YEmperor Expansion§!」は帝国事件などの神聖ローマ帝国のシステムや、帝国を集権化または分権化する機能を追加します。"
  dlc101_reason_hre_emperor_reason:0 "\n§Y神聖ローマ帝国§!内の国家を選択しているため、このDLCを推奨します。"
  dlc101_reason_french_revolution:0 "「§YEmperor Expansion§!」は革命熱や革命の中心地のシステム、及びフランス用に改良されたミッションツリーを追加します。"
  dlc101_reason_venice:0 "「§YEmperor Expansion§!」は§Yヴェネツィア§!用の改良されたミッションツリーを追加します。"
@@ -670,7 +670,7 @@
  dlc103_reason_bta_reason:0 "\n§Yイタリア§!または§Yスイス§!の国家を選択しているため、このユニットパックを推奨します。"
  dlc104_reason_unifiers:0 "「§!Unifiers Unit Pack§Y」は§Yドイツ、ロタリンギア、神聖ローマ帝国及びイタリア§!向けに新しい軍隊モデルを追加します。"
  dlc104_reason_unifiers_reason:0 "\n§Yドイツ、ロタリンギア、神聖ローマ帝国またはイタリア§!を形成可能な国家を選択しているため、このユニットパックを推奨します。"
- dlc101_reason_burgundy:0 "「§YEmperor Expansion§!」は改良されたブルゴーニュ継承などのImperial Incidents、及びブルゴーニュ独自のミッションツリーを追加します。"
+ dlc101_reason_burgundy:0 "「§YEmperor Expansion§!」は改良されたブルゴーニュ継承などの帝国事件、及びブルゴーニュ独自のミッションツリーを追加します。"
  dlc101_reason_burgundy_reason:0 "\n§Yブルゴーニュ§!を選択しているため、このユニットパックを推奨します。"
  dlc105_reason_europe:0 "「§YEmperor Music Pack§!」は近世ヨーロッパからインスピレーションを得た5つの新しい楽曲を追加します。"
  dlc105_reason_europe_reason:0 "§Yヨーロッパ§!の国家を選択しているため、この音楽パックを推奨します。"
