Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -251,7 +251,7 @@
  desc_ingolstadt_beer_city:0 "インゴルシュタットとその周辺には数多くの有名な醸造所が作られ、街をバイエルンのビール醸造の主要な中心地の1つにしている。"
  new_flavour_bav.13.name:0 "バイエルンの継承"
  new_flavour_bav.13.desc:0 "ヴィッテルスバッハ家が治めるバイエルン公国は、14世紀半ば以降様々な形で分割されてきた。現在、公国はミュンヘン、ランツフート、インゴルシュタットの三つの分家に分かれている。男子後継者を残さないまま亡くなった公爵の土地をどの分家が相続するかは、様々な複雑な取り決めによって定められている。しかし、これらの取り決めによって常に論争を抑え込めるというわけではなく、また強大な公爵は自らの主張が完全に正当であるかどうかに関わらず、親族の土地によって自らの力を増大させようとすることもある。"
- new_flavour_bav.13.opt:0 "あるいはバイエルンは統一を取り戻すべきかもしれない。"
+ new_flavour_bav.13.opt:0 "できるなら、バイエルンは統一を取り戻すべきだ。"
  new_flavour_bav.14.name:0 "ルートヴィヒ8世の死"
  new_flavour_bav.14.desc:0 "後継者のいない、ヴィッテルスバッハ家のインゴルシュタット公ルートヴィヒ8世が死去した。ヴィッテルスバッハ一族の取り決めに従い、インゴルシュタット公国は今、[Root.Monarch.GetTitle][Root.Monarch.GetName]のものとなっている。"
  new_flavour_bav.14.opt:0 "素晴らしい。"
