--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -792,13 +792,13 @@
  CANNOT_REVOKE_PRIVILEGE:1 "現在この特権を取り消すことができません：\n$REASON$"
  CHARTER_COMPANY_CAPITAL_SAME_SUPER_REGION:0 "自分と同じ亜大陸に首都がある国から勅許会社を要求することはできません"
  NO_MP_AFTER_RNW_OR_CN:0 "ランダムな新世界またはカスタム国家を使用した後にマルチプレイにアクセスすることはできません。マルチプレイにアクセスするにはゲームを再起動してください。"
- TECH_GOVERNING_CAPACITY:0 "統治限界：$VAL|+G$\n"
- GOVERNING_CAPACITY_TOOLTIP:0 "§Y統治限界§!\n現在$CAPACITY|Y0$のうち$USED|Y0$を使用しています。\n\n以下の補正：\n$MOD$"
+ TECH_GOVERNING_CAPACITY:0 "領土管理限界：$VAL|+G$\n"
+ GOVERNING_CAPACITY_TOOLTIP:0 "§Y領土管理限界§!\n現在$CAPACITY|Y0$のうち$USED|Y0$を使用しています。\n\n以下の補正：\n$MOD$"
  OVER_GOVERNING_CAPACITY_TOOLTIP:0 "\n限界を§R超過§!したことによるペナルティ：\n$MOD$"
  GOVERNING_CAPACITY_MODIFIER:0 "\n以下により計算されます：\n$MODIFIER$"
- over_governing_capacity_modifier:0 "統治限界の超過"
- MODIFIER_GOVERNING_CAPACITY:0 "統治限界"
- MODIFIER_GOVERNING_CAPACITY_MODIFIER:0 "統治限界への補正"
+ over_governing_capacity_modifier:0 "領土管理限界の超過"
+ MODIFIER_GOVERNING_CAPACITY:0 "領土管理限界"
+ MODIFIER_GOVERNING_CAPACITY_MODIFIER:0 "領土管理限界への補正"
  MODIFIER_GOVERNING_COST:0 "統治コスト"
  MODIFIER_LOCAL_GOVERNING_COST:0 "州統治コスト"
  MODIFIER_STATEWIDE_GOVERNING_COST:0 "ステート全域の統治コスト"
@@ -973,7 +973,7 @@
  HRE_PAST4INCIDENTS:0 "過去の事件"
  HRE_IMPERIALAUTHORITY:0 "帝国の権威"
  HRE_DOMINANTFAITH:0 "支配的な信仰"
- GOVERNING_CAPACITY:0 "統治限界"
+ GOVERNING_CAPACITY:0 "領土管理限界"
  STATES_AND_TERRITORIES:0 "ステートとテリトリー"
  DEVELOPMENT_TEXT:0 "開発度"
  alert_enact_golden_bull_instant:0 "金印勅書を制定する"
