--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -205,7 +205,7 @@
  efficient_spies:0 "効率的なスパイ"
  efficient_spies_desc:0 "金のためならなんでもする農民はごまんといるが、その中から本当に使える者を見つけ出すのはたやすくない。我々は経験から有能な人材とそうでない者を見分ける術を学んでいる。"
  shady_recruitment:0 "日陰者の雇用"
- shady_recruitment_desc:0 "非常に低い階級から優秀な人を識別して募集する能力は、優秀な人々を信じられないほど多く残している。それは素晴らしいことだ。"
+ shady_recruitment_desc:0 "我々には非常に低い階級から優秀な人を識別して採用する能力があり、怪しげな者の多くは採用されていない。もちろんそれは我々がそうしているからだ。それは素晴らしいことだ。"
  destabilising_efforts:0 "不安定化運動"
  destabilising_efforts_desc:0 "我々の諜報能力は、敵の安定性を脅かす。 我々は、彼らの最高の友達を敵にすることができる。"
  espionage:0 "諜報"
